# toto

./: Cargo.toml  README.md
src/: lib.rs
src/func/: fromf32.rs  fromf64.rs  fromi128.rs  fromi16.rs  fromi32.rs  fromi64.rs  fromi8.rs  fromisize.rs  fromu128.rs  fromu16.rs  fromu32.rs  fromu64.rs  fromu8.rs  fromusize.rs  mod.rs
src/trait/: mod.rs  tof64.rs  toi128.rs  toi32.rs  toi64.rs  tou128.rs  tou16.rs  tou32.rs
src/traits/: mod.rs  tof32.rs  toi16.rs  toi8.rs  toisize.rs  tou64.rs  tou8.rs  tousize.rs
