[package]
name = "toto"
version = "1.0.0"
edition = "2021"
license-file = "LICENSE"
description = "This crate provides a simple conversion method between basic numerical types"
homepage = "https://github.com/zredb/toto"
repository = "https://github.com/zredb/toto"
readme = "README.md"
keywords = ["numerical", "type", "conversion", "calculation"]
categories = ["utilities", "numerical computation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
